force-app/main/default/objects/Account/fields/GWP__c.field-meta.xml
<CustomField>
    <fullName>GWP__c</fullName>
    <label>Gross Written Premium</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>