force-app/main/default/objects/Account/fields/GWP_Target__c.field-meta.xml
<CustomField>
    <fullName>GWP_Target__c</fullName>
    <label>GWP Target</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>