force-app/main/default/objects/Account/fields/Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score__c</fullName>
    <label>Relationship Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>