force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Strategic</fullName><default>false</default><label>Strategic</label></value>
            <value><fullName>Preferred</fullName><default>false</default><label>Preferred</label></value>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>